# TraceBug

./: .gitignore  README.md
backend/: .env_example  build.sh  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/routes/: __init__.py
backend/app/routes/CodePayLoad/: __init__.py  schemas.py  views.py
backend/app/routes/health/: __init__.py  schemas.py  views.py
backend/app/utils/: grok.py  mistralAI.py  riskAnalyzer.py  togetheAI.py
backend/app/utils/riskAnalyzer/: __init__.py  riskAnalyzer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeBlock.tsx  CodePayloadIDE.css  CodePayloadIDE.tsx  CodeSender.tsx
